Implemented the photo upload functionality
Implemented the cloudinary Cloud for storing images, used viewChild, Used behaviour subject for component to component communication and photo alogirithms

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -17,6 +17,9 @@
       
     </ul>
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <span class="mr-1">
+        <img src="{{photoUrl}}" alt="">
+      </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
         Welcome {{authService.decodedToken.unique_name | titlecase}}
       </a>
@@ -32,6 +35,4 @@
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">login</button>
     </form>
   </div>
-  
-  
 </nav>
